--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 
     <title>Creative - Start Bootstrap Theme</title>
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/font-software/font-mfizz.css">
+    <link rel="stylesheet" href="../static/css/font-software/font-mfizz.css">
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
             rel="stylesheet" 
@@ -78,9 +78,9 @@
         </div>
     </header>
 
-    
+    <!-- Generate languages dynamically from database -->
 
-    <section id="services">
+        <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -92,34 +92,25 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box " >
-                        <i class="icon-cplusplus myiconstyle" ></i>
-                        <h3>C++ </h3>
-                         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
-                        <p class="text-muted">Goog in C++? Try this.</p>
-                    </div>
-                </div>
+
+                <!-- Generate div for every language in database -->
+                {% for quiz in quizzes %}
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="icon-python myiconstyle"></i>
-                        <h3>Python </h3>
+                        <i class="icon-{{quiz.programming_language}} myiconstyle"></i>
+                        <h3>{{quiz.name}}</h3>
                          <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
-                        <p class="text-muted">Is python your main programing language? Well this is for you. <then class=""></then></p>
+                        <p class="text-muted">{{quiz.message}}</p>
+                        <!-- Goog in C++? Try this. -->
                     </div>
                 </div>
-                
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="icon-java myiconstyle"></i>
-                        <h3>Java </h3>
-                         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
-                        <p class="text-muted">Feeling good in java? Proove it!</p>
-                    </div>
-                </div>
+                {% endfor %}
+               
             </div>
         </div>
     </section>
+
+    <!-- until here -->
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
