Working next button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -99,7 +99,7 @@
                     <div class="service-box">
                         <i class="icon-{{quiz.programming_language}} myiconstyle"></i>
                         <h3>{{quiz.name}}</h3>
-                         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                         <a href="/{{quiz.programming_language}}/1" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                         <p class="text-muted">{{quiz.message}}</p>
                         <!-- Goog in C++? Try this. -->
                     </div>
