--- a/app/templates/quizsheet.html
+++ b/app/templates/quizsheet.html
@@ -36,8 +36,7 @@
     <![endif]-->
 
 </head>
-
-
+<body>
 <div class="container">
         <div class="row"><br><br>
             <div class="col-sm-8 col-sm-offset-2">
@@ -64,7 +63,7 @@
                         {% endfor %}
                         
                         </ul>
-                        <div class="btn btn-success">Send</div>
+                        <div class="btn btn-success" id="nextQuestion">Send</div>
                     </div>
                 </div>
                 
@@ -92,3 +91,12 @@
             </div>
         </div>
     </div>
+
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous"></script>
+
+    <script src="../static/js/my_scripts.js"></script>
+</body>
