--- a/app/templates/quizsheet.html
+++ b/app/templates/quizsheet.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Creative - Start Bootstrap Theme</title>
     <!-- Bootstrap Core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-            rel="stylesheet" 
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-            crossorigin="anonymous">
+<link rel="stylesheet" 
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" 
+        crossorigin="anonymous">
 
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
@@ -47,12 +47,22 @@
                         </div>
                     </div>
 
+                    <nav>
+                        <ul class="my-pagination justify-content-center">
+                            {% for number in range(1, questions_row_count + 1) %}
+                            <li class="page-item"><a class="page-link" href="/{{quiz_name}}/{{number}}">{{number}}</a></li>
+                            {% endfor %}
+                            </li>
+                        </ul>
+                    </nav>
+
                     <div id="quiz">
                         <div class="question">
                             <h3><span class="label label-warning" id="qid">{{question.id}}</span>
                             <span id="question">{{question.text}}</span>
                             </h3>
                         </div>
+                        <p>{{row_count}}</p>
                         <ul>
                         {% for a in answers %}
                         <li>
