Added working active button in quizsheet pagination

--- a/app/templates/quizsheet.html
+++ b/app/templates/quizsheet.html
@@ -50,7 +50,7 @@
                     <nav>
                         <ul class="my-pagination justify-content-center">
                             {% for number in range(1, questions_row_count + 1) %}
-                            <li class="page-item"><a class="page-link" href="/{{quiz_name}}/{{number}}">{{number}}</a></li>
+                            <li class="my-page-item"><a class="my-page-link" href="/{{quiz_name}}/{{number}}">{{number}}</a></li>
                             {% endfor %}
                             </li>
                         </ul>
