--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -150,11 +150,9 @@
                         <img src="../static/img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                     Programin quiz
                                 </div>
                             </div>
                         </div>
@@ -165,11 +163,9 @@
                         <img src="../static/img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                   Programin quiz
                                 </div>
                             </div>
                         </div>
@@ -180,11 +176,9 @@
                         <img src="../static/img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                     Programin quiz
                                 </div>
                             </div>
                         </div>
@@ -195,11 +189,9 @@
                         <img src="../static/img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                     Programin quiz
                                 </div>
                             </div>
                         </div>
@@ -217,15 +209,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Want to report a bug ,or just keep in touch with us? Don't hazitate to write us an email! :)</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
+                
+                <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">yoan_vt@abv.bg</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">mario.vekilov@gmail.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">nadi112355@gmail.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">NA ALEX EMAILA</a></p>
                 </div>
             </div>
         </div>
