Added new DB with name uniqueness.Usernames are adding to DB

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,7 +48,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Programing quiz</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Programmingg quiz</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -99,7 +99,7 @@
                     <div class="service-box">
                         <i class="icon-{{key.programming_language}} myiconstyle"></i>
                         <h3>{{key.name}}</h3>
-                         <a href="/{{key.programming_language}}/{{value}}" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                         <a href="/{{key.programming_language}}/add_user" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                         <p class="text-muted">{{key.message}}</p>
                         <!-- Goog in C++? Try this. -->
                     </div>
@@ -120,11 +120,9 @@
                         <img src="../static/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                    Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -135,11 +133,9 @@
                         <img src="../static/img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
+                                
                                 <div class="project-name">
-                                    Project Name
+                                    Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -152,7 +148,7 @@
                             <div class="portfolio-box-caption-content">
                                 
                                 <div class="project-name">
-                                     Programin quiz
+                                     Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -165,7 +161,7 @@
                             <div class="portfolio-box-caption-content">
                                 
                                 <div class="project-name">
-                                   Programin quiz
+                                   Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -178,7 +174,7 @@
                             <div class="portfolio-box-caption-content">
                                 
                                 <div class="project-name">
-                                     Programin quiz
+                                     Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -191,7 +187,7 @@
                             <div class="portfolio-box-caption-content">
                                 
                                 <div class="project-name">
-                                     Programin quiz
+                                     Programming quiz
                                 </div>
                             </div>
                         </div>
@@ -209,15 +205,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Want to report a bug ,or just keep in touch with us? Don't hazitate to write us an email! :)</p>
+                    <p>Want to report a bug ,or just keep in touch with us? Don't hasitate to write us an email! :)</p>
                 </div>
                 
                 <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">yoan_vt@abv.bg</a></p>
-                    <p><a href="mailto:your-email@your-domain.com">mario.vekilov@gmail.com</a></p>
-                    <p><a href="mailto:your-email@your-domain.com">nadi112355@gmail.com</a></p>
-                    <p><a href="mailto:your-email@your-domain.com">NA ALEX EMAILA</a></p>
+                    <p><a href="#">yoan_vt@abv.bg</a></p>
+                    <p><a href="#">mario.vekilov@gmail.com</a></p>
+                    <p><a href="#">nadi112355@gmail.com</a></p>
+                    <p><a href="#">aleksandar.ikonomov@abv.bg</a></p>
                 </div>
             </div>
         </div>
