--- a/app/templates/proba.html
+++ b/app/templates/proba.html
@@ -1,5 +1,5 @@
-{% for key, value in data.items() %}
-{{key}}
-{{value}}
-
-{% endfor %}
+<form method="POST">
+    <input type="text" name='name' required>
+    <p>Hi</p>
+    <button type="sumbit">Send</button>
+</form>
