--- a/app/templates/quizsheet.html
+++ b/app/templates/quizsheet.html
@@ -72,6 +72,7 @@
                         {% endfor %}
                         
                         </ul>
+                        <form action=""></form>
                         <div class="btn btn-success" id="nextQuestion">Send</div>
                     </div>
                 </div>
