--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -205,7 +205,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Want to report a bug ,or just keep in touch with us? Don't hasitate to write us an email! :)</p>
+                    <p>Want to report a bug or just keep in touch with us? Don't hesitate to write us an email! :)</p>
                 </div>
                 
                 <div class="col-lg-12 text-center">
