--- a/app/templates/proba.html
+++ b/app/templates/proba.html
@@ -1,5 +1,1 @@
-<form method="POST">
-    <input type="text" name='name' required>
-    <p>Hi</p>
-    <button type="sumbit">Send</button>
-</form>
+{{data}}
