--- a/app/static/css/quizsheetcss.css
+++ b/app/static/css/quizsheetcss.css
@@ -3,92 +3,6 @@ body, html{
   background: #6AA4B8;
   font-family: 'Lato', sans-serif;
 }
-#chartdiv {
-    width   : 100%;
-    min-height  : 405px;
-    height: auto;
-}
-.center-block{
-    width: 100%;
-}
-h2 {
-    color: #AAAAAA;
-    font-weight: normal;
-}
-.bg-for-submit-name
-{
-    background: url('https://lh4.ggpht.com/GLT1kYMvi4oiguL9FOc1eM5q7sW0AvVJNWyBZ26iMq-BSm3Kpi9CPDR2UGoVlYrVwA=h900') fixed;
-    background-size: cover;
-    padding: 0;
-    margin: 0;
-}
-.margin-top{
-    margin-top: 270px;
-}
-
-.wrap
-{
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
-}
-
-p.form-title
-{
-    font-family: 'Open Sans' , sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    color: #FFFFFF;
-    margin-top: 5%;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
-
-form
-{
-    width: 250px;
-    margin: 0 auto;
-}
-
-form.login input[type="text"], form.login input[type="password"]
-{
-   width: 100%;
-    margin: 0;
-    padding: 5px 10px;
-    background: #fff;
-    border: 0;
-    border-bottom: 3px solid #75ba48;
-    outline: 0;
-    font-size: 15px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
-    color: #000;
-    outline: 0;
-
-}
-
-form.login input[type="submit"]
-{
-    width: 100%;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-top: 16px;
-    outline: 0;
-    cursor: pointer;
-    letter-spacing: 1px;
-}
-
-form.login input[type="submit"]:hover
-{
-    transition: background-color 0.5s ease;
-}
 
 .btn-success {
     color: #fff;
@@ -108,91 +22,23 @@ form.login input[type="submit"]:hover
     background-color: #2FC0AE !important;
     border-color: #2FC0AE !important;
 }
-form.login label, form.login a
-{
-    font-size: 12px;
-    font-weight: 400;
-    color: #FFFFFF;
-}
-
-form.login a
-{
-    transition: color 0.5s ease;
-}
-
-form.login a:hover
-{
-    color: #2ecc71;
-}
-
-.pr-wrap
-{
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    display: none;
-}
-
-.show-pass-reset
-{
-    display: block !important;
-}
-
-.pass-reset
-{
-    margin: 0 auto;
-    width: 250px;
-    position: relative;
-    margin-top: 22%;
-    z-index: 999;
-    background: #FFFFFF;
-    padding: 20px 15px;
-}
-
-.pass-reset label
-{
-    font-size: 12px;
-    font-weight: 400;
-    margin-bottom: 15px;
-}
-
-.pass-reset input[type="email"]
-{
-    width: 100%;
-    margin: 5px 0 0 0;
-    padding: 5px 10px;
-    background: 0;
-    border: 0;
-    border-bottom: 1px solid #000000;
-    outline: 0;
-    font-style: italic;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    margin-bottom: 5px;
-    color: #000000;
-    outline: 0;
-}
-
-.pass-reset input[type="submit"]
-{
-    width: 100%;
-    border: 0;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-top: 10px;
-    outline: 0;
-    cursor: pointer;
-    letter-spacing: 1px;
-}
 
 /*----------quiz.css---------------*/
-
+#show-hint-button{
+    background-color: #75ba48;
+    color: #fff;
+    padding: 6px 15px;
+    border: 1px solid #75ba48;
+    outline: none;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    margin-top: 20px;
+}
+.show-hint p{
+    color: #aaaaaa;
+    font-size: 15px;
+    padding-left: 80px;
+}
 
 .loanParamsLoader {
     top: 143px;
@@ -221,7 +67,7 @@ form.login a:hover
 }
 
 
-ul li{
+#quiz ul li{
   color: #AAAAAA;
   display: block;
   position: relative;
@@ -272,7 +118,7 @@ ul li:hover .check {
 }
 
 ul li .check::before {
-  display: block;
+    display: block;
     position: absolute;
     content: '';
     border-radius: 100%;
@@ -280,7 +126,7 @@ ul li .check::before {
     width: 14px;
     top: 3px;
     left: 3px;
-  margin: auto;
+    margin: auto;
     transition: background 0.25s linear;
     -webkit-transition: background 0.25s linear;
 }
@@ -305,43 +151,4 @@ input[type=radio]:checked ~ label{
 }
 .cross:checked ~ label{
   color: #FF0000 !important;
-}
-
-#result-of-question th{
-  text-align: center;
-    background: #75ba48;
-    color: #fff;
-    padding: 18px;
-    font-size: 18px;
-    border: none;
-}
-#result-of-question  td{
-  text-align: center;
-    color: #222;
-    background-color: #fff;
-    padding: 18px;
-    font-size: 15px;
-    font-weight: 600;
-    border: 1px solid #75ba48;
-}
-
-#totalCorrect{
-    color: #fff;
-    background: #75ba48;
-    padding: 22px 20px;
-    border-radius: 1px;
-    font-stretch: expanded;
-    font-size: 28px;
-    font-weight: bold;
-    border-top-right-radius: 25px;
-    border-top-left-radius: 25px;  
-}
-#alert{
-    /* Position fixed */
-    position:fixed;
-    /* Center it! */
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
 }
