Answering the quiz now adds the data to the DB

--- a/app/templates/error404.html
+++ b/app/templates/error404.html
@@ -14,9 +14,7 @@
         color: #f7efef;
         font-size:550%;
         text-align: center;
-        position: relative;
-        top: 50%;
-        transform: translateY(280%);
+        margin-top: 20%;
     }     
   </style>
 </head>
@@ -25,7 +23,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-                <h1 class="text">{{message}}</h1>      
+            <h1 class="text">{{message}}</h1>      
         </div> 
     </div>
 </div>
