--- a/app/templates/quizsheet.html
+++ b/app/templates/quizsheet.html
@@ -24,18 +24,15 @@
 </head>
 <body>
 <div class="container">
-
     <div class="row">
-        <div class="col-md-8 col-sm-offset-2">
-            <nav>
-                <ul class="my-pagination justify-content-center">
+            <nav class="my-nav-center">
+                <ul class="my-pagination">
                     {% for number in question_ids %}
                         <li class="my-page-item"><a class="my-page-link" href="/{{quiz_name}}/{{number}}">{{loop.index}}</a></li>
                     {% endfor %}
                     </li>
                 </ul>
             </nav>
-        </div>
     </div>
 
     <div class="row"><br><br>
@@ -51,8 +48,8 @@
                     <ul>
                         {% for a in answers %}
                             <li>
-                            <input type="radio" class="inputoption" id="{{a[:2] + a[-3:]}}-option" name="answers" value="{{a}}" required>
-                            <label for="{{a[:2] + a[-3:]}}-option" class="element-animation">{{a}}</label>
+                            <input type="radio" class="inputoption" id="{{a[:2]}}+{{loop.index}}-option" name="answers" value="{{a}}" required>
+                            <label for="{{a[:2]}}+{{loop.index}}-option" class="element-animation">{{a}}</label>
                             <div class="check"></div>
                             </li>
                         {% endfor %}
