Added result score.

--- a/app/static/css/quizsheetcss.css
+++ b/app/static/css/quizsheetcss.css
@@ -48,7 +48,7 @@ body, html{
     width: 135%;
 }
 .question{
-    background: #F05F40;
+    background: #75ba48;
     padding: 20px;
     color: #fff;
     border-bottom-right-radius: 55px;
