--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,29 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
     <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Want a quiz?</h2>
-                    <h2 class="section-heading">Choose one from  down bellow.</h2>
-                    <hr class="primary">
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Want a quiz?</h2>
+                <h2 class="section-heading">Choose one from  down bellow.</h2>
+                <hr class="primary">
             </div>
         </div>
-        <div class="container">
-            <div class="row">
+    </div>
+    <div class="container">
+        <div class="row">
 
-                <!-- Generate div for every language in database -->
-                {% for quiz in quizzes %}
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="icon-{{quiz.name}} myiconstyle"></i>
-                        <h3>{{quiz.name}}</h3>
-                         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
-                        <p class="text-muted">{{quiz.message}}</p>
-                        <!-- Goog in C++? Try this. -->
-                    </div>
+            <!-- Generate div for every language in database -->
+            {% for quiz in quizzes %}
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="icon-{{quiz.name}} myiconstyle"></i>
+                    <h3>{{quiz.name}}</h3>
+                        <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <p class="text-muted">{{quiz.message}}</p>
+                    <!-- Goog in C++? Try this. -->
                 </div>
-                {% endfor %}
-               
             </div>
+            {% endfor %}
+            
         </div>
-    </section>
+    </div>
+</section>
+</body>
+</html>
