--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -59,6 +59,7 @@
                     {% endfor%}
                 </tbody>
             </table>
+            <h1 style="margin:0 auto;"><a href="/">Back to homepage</a></h1>
         </div>
     </div>
 </body>
